--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,18 @@ body,
 html {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+.App {
+  width: 80%;
+  margin: 84px auto;
+  display: flex;
+  justify-content: space-around;
 }
